<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/banregio_icon"
            android:title="@string/txt_menu_banregio" />

        <item
            android:id="@+id/menu_sucursales"
            android:icon="@drawable/atm_icon"
            android:title="@string/txt_menu_sucursales" />


        <item
            android:id="@+id/menu_datos"
            android:icon="@drawable/cash_icon"
            android:title="@string/txt_menu_datos" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/txt_menu_logout" />
    </group>
</menu>