<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/generic_margin"
            android:gravity="center"
            android:text="@string/title_alta_user"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/circle_image_size"
            android:layout_height="@dimen/circle_image_size"
            android:layout_gravity="center"
            android:src="@drawable/usuario"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/generic_margin"
            android:layout_marginStart="@dimen/generic_margin"
            android:layout_marginTop="@dimen/generic_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small_padding"
                    android:drawableStart="@android:drawable/ic_menu_edit"
                    android:hint="@string/hint_names"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small_padding"
                    android:drawableStart="@android:drawable/ic_menu_edit"
                    android:hint="@string/hint_lastnames"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layOutBirthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editBirthdaty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small_padding"
                    android:drawableStart="@android:drawable/ic_menu_my_calendar"
                    android:focusable="true"
                    android:hint="@string/hitn_birthday"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="@dimen/small_padding"
                    android:drawableStart="@android:drawable/ic_menu_mapmode"
                    android:focusable="true"
                    android:hint="@string/hint_direction"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:background="@drawable/rounded_buttom"
                android:text="@string/text_save"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size"
                android:theme="@style/RippleButton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>